--- a/now.json
+++ b/now.json
@@ -12,5 +12,13 @@
       "use": "@now/static"
     }
   ],
+  "routes": [
+    {
+      "src": ".*",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ],
   "alias": "WebAppFramework.projects.ponomarevlad.ru"
 }
