--- a/old_landing/now.json
+++ b/old_landing/now.json
@@ -19,5 +19,13 @@
       "use": "@now/static"
     }
   ],
+  "routes": [
+    {
+      "src": ".*",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
+    }
+  ],
   "alias": "LaPaSoftware.projects.ponomarevlad.ru"
 }
